--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ simple/node_modules/
 .vagrant/
 multi/build/
 simple/ubuntu-xenial-16.04-cloudimg-console.log
+ubuntu-xenial-16.04-cloudimg-console.log
