--- a/multi/Dockerfile
+++ b/multi/Dockerfile
@@ -7,7 +7,7 @@ RUN npm install
 COPY ./src ./src
 RUN npm run build
 
-FROM node:10.15.2
+FROM node:10.15.2-alpine
 
 WORKDIR /usr/src/app
 COPY package*.json ./
