--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
-multi/node_modules/
-simple/node_modules/
-.vagrant/
-multi/build/
-simple/ubuntu-xenial-16.04-cloudimg-console.log
-ubuntu-xenial-16.04-cloudimg-console.log
+node_modules/
+build/
